# SystemCall

./: .gitignore  README.md
io/: 01_open.c  02_read.c  03_write.c  04_lseek.c  05_stdin.c  06_stdout.c  07_shared_file.c  08_dup.c  09_dup2.c  10_fcntl_dup.c  11_fcntl_fget_fset.c  CMakeLists.txt
io/file/: 11_fcntl_fget_fset.txt
property/: 01_stat.c  02_mask.c  03_chmod.c  04_symlink.c  05_lstat.c  06_fstat.c  07_umask.c  08_truncate_ftruncate.c  09_getcwd_chdir.c  10_link_unlink.c  11_remove.c  12_rename.c  13_readlink.c  14_mkdir.c  15_rmdir.c  16_opendir_readdir.c  CMakeLists.txt
